--- a/src/components/pages/auth/Authorisation.scss
+++ b/src/components/pages/auth/Authorisation.scss
@@ -3,48 +3,100 @@
 .container {
   display: flex;
   justify-content: center;
-  text-align: center;
-  flex-direction: column;
+  align-items: center;
+  height: 100vh;
 
   .form {
-    width: auto;
-    margin: 0 auto;
-    border: 1px solid #9a9a9a;
-    border-radius: 15px;
-    padding: 25px;
+    width: 300px;
+    padding: 32px;
+    border-radius: 10px;
+    box-shadow: 0 4px 16px #ccc;
+    letter-spacing: 1px;
 
-    &__control {
-      display: block;
-      margin: 5px;
-      font-size: 20px;
-      transition: 0.3s all ease-in;
-      outline: none;
+    &__title {
+      margin: 0 0 32px 0;
+      font-weight: normal;
+      transition: .3s all ease-in;
+      text-align: center;
 
-      border: 1px solid #ccc;
-      border-radius: 3px;
-
-      &:focus {
-        border: 1px solid $blue;
+      &:hover {
+        color: $green;
       }
     }
 
-    &__link {
-     color: $darkBlue;
-      border-bottom: 1px solid $darkBlue;
+    &__button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      letter-spacing: 1px;
+      font-size: 18px;
+      color: #fff;
+      background: $blue;
+      outline: none;
+      cursor: pointer;
+      transition: 0.3s;
+
+      &:hover, &:focus {
+        background: $darkBlue
+      }
     }
 
-    button {
-      display: block;
-      background: #fff;
-      font-size: 25px;
-      border: 1px solid $green;
-      color: black;
+    &__group {
+      position: relative;
+      margin-bottom: 32px;
+    }
+
+    &__control {
       border-radius: 5px;
-      transition: 0.3s all ease-in;
+      width: 100%;
+      padding: 0 0 10px 0;
+      border: none;
+      border-bottom: 1px solid #e0e0e0;
+      background-color: transparent;
+      outline: none;
+      transition: 0.3s;
+      font-size: 20px;
+
+      &:focus {
+        border-bottom: 1px solid #1a73a8;
+        transform: scale(1.05);
+      }
+    }
+
+    &__control:focus ~ &__label,
+    &__control:not(:placeholder-shown) ~ &__label {
+      top: -18px;
+      font-size: 15px;
+      color: #e0e0e0;
+    }
+
+    &__error {
+      text-align: center;
+      background: #e81717;
+      padding: 10px;
+      border: 1px solid #e81717;
+      border-radius: 7px;
+      color: #fff;
+    }
+
+    &__label {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      color: #9e9e9e;
+      transition: 0.3s;
+    }
+
+    &__link {
+      font-size: 20px;
+      text-align: center;
+      transition: .3s all ease-in-out;
 
       &:hover {
-        background: $green;
-        color: white;
+        color: $darkBlue;
+        padding-bottom: 5px;
+        border-bottom: 1px solid $darkBlue
       }
     }
   }
